# AudioAndVideoKotlin

./: README.md  settings.gradle  使用手机自带的相机进行视频采集.md
android-media-project/: build.gradle
android-media-project/src/androidTest/java/com/kpa/android_media_project/: ExampleInstrumentedTest.kt
android-media-project/src/main/: AndroidManifest.xml
android-media-project/src/main/java/com/kpa/android_media_project/: MainActivity.kt
android-media-project/src/main/res/values/: strings.xml
android-media-project/src/test/java/com/kpa/android_media_project/: ExampleUnitTest.kt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kpa/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg-test.cpp  ffmpeg-utils.cpp  ffmpeg-utils.h  mp3-encoder-lib.cpp  mp3-encoder-libs.cpp
app/src/main/cpp/utils/: utils.h
app/src/main/java/com/kpa/android/: AVApplication.kt
app/src/main/java/com/kpa/android/care/: Demo.kt
app/src/main/java/com/kpa/android/care/base/: BaseActivity.kt  BaseFragment.kt  BaseViewModel.kt  NetworkHandler.kt
app/src/main/java/com/kpa/android/care/di/: ApplicationComponent.kt
app/src/main/java/com/kpa/android/care/di/viewmodel/: ViewModelFactory.kt  ViewModelKey.kt  ViewModelModule.kt
app/src/main/java/com/kpa/android/care/exception/: Context.kt  Failure.kt
app/src/main/java/com/kpa/android/care/extension/: Context.kt  Fragment.kt  Lifecycle.kt  String.kt  View.kt
app/src/main/java/com/kpa/android/care/natives/: NativeHelper.kt
app/src/main/java/com/kpa/android/features/: Demo.kt
app/src/main/java/com/kpa/android/features/ui/: MainActivity.kt  MainFragment.kt
app/src/main/java/com/kpa/android/features/ui/main/: MainActivity.kt  MainFragment.kt
app/src/main/java/com/kpa/android/features/ui/main/viewmodel/: MainViewModel.kt
app/src/main/java/com/kpa/android/features/ui/simple_camera/: ControllerCameraActivity.kt  FileUtils.kt  SimpleCameraActivity.kt  SimpleVideoActivity.kt
app/src/main/java/com/kpa/android/features/ui/simple_camera/view/: CameraPreview.kt
app/src/main/java/com/kpa/android/features/ui/video_collect/: VideoCollectActivity.kt  VideoCollectFragment.kt
app/src/main/java/com/kpa/android/features/ui/video_collect/view/: CameraPreview.kt
app/src/main/java/com/kpa/android/features/ui/viewmodel/: MainViewModel.kt
app/src/main/res/layout/: activity_ctroller_camera.xml  activity_main.xml  activity_simple_camera.xml  activity_simple_video.xml  activity_video_collect.xml  fragment_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/kpa/android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
